remove plex from kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:JL++kS2XNZx+W0muqffPuQC+cUMUMDbpldwhuEQQhETw12awUqUlmLYgwJLDhj7bRBzgzEXnp9KczaIPEDcCHLQ=,iv:3MXmkgiUWVL2zQuPSxAfn8Mjze14I5EAviW0SqcxwpM=,tag:ciyOHXqnNVcBQjGCTnAh4A==,type:comment]
-#ENC[AES256_GCM,data:xSQFYSngZsUP5ufGNQH2cldbVDO2P+VDwwlrOC/tL+PWpVhx5js+ScxuyC8=,iv:VM1jAXoAULTVSX2LdXo6tXZw+UBhR6rk86q2tsoTXhY=,tag:pReX8ghBaN6QSQeR5vK6uw==,type:comment]
-VIP: ENC[AES256_GCM,data:sbTHGAx2Zy4C88y5Aw==,iv:ZQ1lkZIPAQCyIDDkGw2yfxNL1lbwypRYjOgv+tKnFgg=,tag:WAq1yWf27OFcLPmksd4AMg==,type:str]
-#ENC[AES256_GCM,data:r9duCReu9lnIMhBUo26hjo7vURP301jVakaW,iv:8LXG4yZeYj0O1tAkdXQfX/EAuBIbProI+RCzFreR7g4=,tag:ROA7Q/LK5e5FfDkL1SMS2w==,type:comment]
-#ENC[AES256_GCM,data:ko3TaQYazPixNfGhokCxbuHCOnQ3gCKGPbPe6kLrjP/1DdSTTJeWbQN9goRoNrl2NGXf3EQzksbkPZwEb+AIt7dSbT0u/ke7jeckLNaIdE9EPU+AklPLR+E=,iv:FLtTIACUBwfSMZeZW82uJqoSlO5OULu3W1fiC7vp6L0=,tag:tlOxORtAzSrqXXrbS1k2Aw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:cayniIfC0lnta1RiyWI=,iv:ipTtXYynZNWrZ6Zw6cYgTjtmXP2aeXlrethQE+hpRG8=,tag:qLKC77HgT3klyXbZI+S4wQ==,type:str]
-#ENC[AES256_GCM,data:0P0jnPvqJqQWX4RP/ckw6etqWAVKQZ+2TGy1NL69oIGnNg==,iv:9UM88SRH90rMjSYqXc+uvGx65pqqKv9BdNe9n+iDCwQ=,tag:0Se43Wi7y+xZskDKN9hPrA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:zXxOKQamPprh6sLvOw==,iv:FEZUl1omXreXlOJCluz0CTTWhPwk+juR69utkAdLhnU=,tag:TeGDbgtfRGzucKUVqUZSjA==,type:str]
-#ENC[AES256_GCM,data:cpxqjOHOCVEzOT/ZUj6urjWX5+CT6mLTz5Jzb5hiizg0AWUSz6PfbfD5JmtET5c=,iv:ztpo+UbtKL3MGSfGKQBRs4JCJ29jJW/ZhpIbMWCiLM0=,tag:xL37SLvLEh5i1W61g1GjqA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:LiEiCnebOpUF5bBP2iZHCAeMd5420tVj7VexFzP1GQ==,iv:/aFMl4i5Zg2sa8mX30fxO3vg4L8CqAUvlaeUknRULeI=,tag:Wzd/HVXC7Em4M+jmfPBFpw==,type:str]
-#ENC[AES256_GCM,data:rnNEFufTC8GG+EepCO3HKYRHle+tQCHLa75bXlWrkpsSNaFQiyrKyioF9K6YlNOs9R9k+FB+qZlActVln8vgIcVa4Dpdr1zhY6opwBtDB2/QiQ==,iv:SeaWUM2AOM/ZWQrALzuQGX6YX9KCuXayopX1k3ckhHE=,tag:HM8saY9575SgZRFB0i75/g==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:2GeQyUDcggzYlrlNLiBb,iv:cS2dQLm5Z98lVB9GGrQROI/82LZnrKpCEuS0HJhdYPA=,tag:bWT5FHICsClMfhOOzT/KHg==,type:str]
-#ENC[AES256_GCM,data:4gRtysZM5MHolSsqPSiwW5DO+C0FmEIX14dpXxMA6qSO,iv:89r4Qp5LE428Flw8JstSoQwn/1Ayo5F8O0qz3N1Npmg=,tag:bfPo+bqxU269hfGGhKr1xg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Gos4RHwo7PnqrW+2qUsH,iv:YIdzPAkGf7QSV4dsu6VEORJOhFWKkOZ38lwacHvnrDw=,tag:Kp1YMME2K3NtSOtD11pujQ==,type:str]
-#ENC[AES256_GCM,data:SnLZY8GxIb7dPKDET5X2w4HyMMRyDcnViE2JTunjgilWEl0sD6SX7RuV58ks6/b8TFk4CpotxEA2SJAejQ85tY+niguidAI/OSbsOD08uJ4=,iv:Vhnx7RnMnN/bTQkvk66q2DNQfGjq/spU3Wy1nlmp+JA=,tag:zf9iNFe42GqKu748P3itBA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:xVzfXSvBuWkoFFfPAfML,iv:n+5ZUkVKSfdt5jPZotRjn8H3+zjdu3liVSK7cfRu13Y=,tag:2MX87H1m8TRpHj9XLmAvtQ==,type:str]
-#ENC[AES256_GCM,data:nxzArbiU5st97EUlvgbnHxVM2Uc3dAF5xcgnxHGtPEImBDgjY2mYRt8yfLL+xHh9rgRjLp34cNihgPkJeKLs/bglfB02Y8jJ2RytL0bBLIjseaLUK+0M,iv:VcSRfdVxoKvDEL7LKVZOwSi7wMUFijmHJtR5ugme2RU=,tag:my7CrwcszfbYgq08vIgk3Q==,type:comment]
-#ENC[AES256_GCM,data:X5VvJQeW+di2cW7j8X6yR+suUvOc1zUgvrhM5kl71tpduvEe070XXKUVLM+vfaWLCz1kz6PrATdBLqCEf+FffXR2X+zO628CgFdcAylD4bVmG4eTPdWdy3xs09Nn5ksdqDmtWLJmG/w8+Sr4GEe+Zv3vW09mBBzNiUaZ4Q==,iv:3u+q/Z+1Texw2JDQXEJF69Q+HHKwtL/hkAt9KTLYtLY=,tag:LM9yPRYP7LgzjWvXhY3gLQ==,type:comment]
-#ENC[AES256_GCM,data:zP9UP4LXcpxrEW20M0SPVoRz/RQJr2gOLY1EtC/gByih+wZNZr5tNjTOujVBPWKMG4ur3/zS7hRYv3Zp7+sd8xpk+8KnYZgs0JFLv+N8aUc=,iv:gUM1C9eNs0p3va4h5rLYk9jYPAe1d2IM8GZ55EgLGuw=,tag:iNRn/DpJGQQSfBXqj0yRPg==,type:comment]
-#ENC[AES256_GCM,data:uvwAgEcJQHpvqPxSRHd+V12NIb21bdvdRpKRknC9ZXosJ4vgwuVzjcA7Y6ulAw4bVUGXkAHY,iv:BBkqkLRF+hFhhJFTpZJLvc1BnxBRrpcyQK94qmf/lm4=,tag:ph8eSno4DmYRoqe593Wnmw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:MckAxoelWUFl7hQe,iv:0hshb9kdXuipErXp6CpH/++dV5wvlooxbnrzIUsRrW0=,tag:SRmfD4mhhiqrUheyAmBsvA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dbmYut/Pch6GKYImHPyzb48=,iv:5eGIkIcCIXAcGk8YK9rJe2/QG6IThZLkEj3YvVPNwi0=,tag:9iRlJW61so8fwjS/SAsmdw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:TFyMn4c/ILbakK1mz3+pv+Ry4YWB4wKk3jGecqHBoO8=,iv:K8Va3AOLv2XimfL1gi9Pm1neG7gsWj0nUxiiYFBunvQ=,tag:EO4R5lmwsBpvRZvIfFJd2g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:GztkgVIa8RXpaggW0MszXguByBdemf/I35COlLc0fNmQLP7nHmAGYg==,iv:jcOWZ1DlJg7o6skubY1vtQvOsoD0tEXjq3uK9EqOdYo=,tag:Ovv061jB0NAEwaWhuPIwFg==,type:str]
-#ENC[AES256_GCM,data:oHrlmYQ4raOSvjmm2a8rZ47iVs/IRt5MgUM34wZ9Qr3ZgqD3G6yTJxJMUiOI+NWZWuFCLzPOX0u58afcpZATdg==,iv:JbeBwr7GB92kd58qzH/1qpqAvzCmqtlIgDuNfdo5Kxg=,tag:o3iw7/akTtYYy5Mja2LA6A==,type:comment]
-#ENC[AES256_GCM,data:6NOOZonX38d1YiLcAXykNNKeVX0xw30Q+QfuVfAZvfgTgRLpZA7Rw1sxqyyDMIm96Eb30VXq8No=,iv:uT2FwbYasKdaLogFlitfxRMd/QrsISkcsiwkNYyA7sg=,tag:UpKrUiTL17u/2NElRySUIw==,type:comment]
-#ENC[AES256_GCM,data:ufPb7uRYsrIDG6ZEOPBrS0GL1zT7WgfWAA==,iv:RRc7XHLI3Hfhz2sDjq16mbK1szY7lRtvTMVGYS5Gl4k=,tag:sph3b83UJf2PKewvN5uxJA==,type:comment]
-#ENC[AES256_GCM,data:7tnAQdlBSemFzosDXs/Lv0ZAEMGJFZdxwJ9CQj0yQ1k598OPNUp6xr8px8PTtRDqZEpeZ0UFTvk9+pQIyC8e+nj2U9Lb6LwKks/OfSs=,iv:9DnJ4u45KUzII/1LnD2XikW0YBkeh6f9NQGxTO0zIjY=,tag:mxdkT2Mcr17e8HH4j5PQ4w==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:f4otRrFgFD8R+VdRmi7Qgt0jgWq8g3OB7r8WJsYaCNk/RJEB5uZ+dAZ4L5avWmso,iv:Jyy89ulPFDnmQLStDLiLepY/yhBemHnnhoe0KAO6mDg=,tag:tEQAGfOPFmgvAEebYaBauQ==,type:str]
-#ENC[AES256_GCM,data:fEQ/NWXUbbKXGEgmnslrCLpqBWxpmZtPcqeAbI7UIGb1udD5i2W37+lB5Yw8O3KxcZQ+R74p9yh7e2KzVipkN4TkkCuM3ig=,iv:YkNozjU61b3yHSNCfF303j5r2tdwA1PEokMPxkV5B50=,tag:AWiMYLYZS0MwbEz5oMg00Q==,type:comment]
-#ENC[AES256_GCM,data:z5jwqOLWLz75D77CTDpV71erhwuEeBHXCvd5JXGn5PvY/xcnydeb3Pn4CMkHSNTXQF3/e/ob,iv:UViRuUeD3dTYUH93hEfs0E0DCT96u5+iH/1ppPzmRbM=,tag:K3XY6tJYHPKBLZ4OLgRQ+A==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:2NIXJrkclw==,iv:pxIzVPbI1gsa8hz/B3H5X9G62Pxykq/SEwmLdjTSM14=,tag:MMKQ389IWqoVfIokiCcaxw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sww8ireSc9Niwpozc+LFKMTokAI=,iv:qZa51rE86/9gTqaYrChvoFMtEMZAVOC7ifhrSHFKj5c=,tag:1pa2VS8M400Vpk8PJVzHgA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:DN4qpvURdOQkdB8=,iv:JGpN9YRjKqeee+zY2mYriuarrlrcdpaoT/E0W4biGNE=,tag:F05bLynVW86XIcaIcZ6P+A==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:9Y3YihYs2lOIO0BYuwOE,iv:3/r3zyI0ThrXHHDgnWpZKWwSo1J3hlsEoMd5Z7jJ90s=,tag:GdBndRjpsLMCBIvZ/ImNTQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:r58ONc2XJ0wz7hXoip2yum502kF5W2TGIQ==,iv:bFb8Ss2BAHLPH4zR6wSM1mi4zx+f/rNvqc2KPi10iT0=,tag:bCw5fBnzX/2MYwhw+cvPjA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0hXKfIU7nWqwRiZKmFEP1vTmf19w55MV,iv:IkDpZpcKoYNsKAWUoHnWQQPgK8+Odxxo6zfKeMBPsJw=,tag:qI0bsjU6NEis23wfLyqMgA==,type:str]
-#ENC[AES256_GCM,data:HVZfRZ6VssFAHAtjo3C25qK8KB0LdPqVRhXUKc30LmAADCAi42Y=,iv:aV/jZmZ+Qz6GP5IWDrJJIkCeGjf5aNjaRHBaE3/aVKc=,tag:voo8fy6A32Do4j5SEKyFHQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:KWTarPFPRFFjWhDlt6L4/vf1ENc=,iv:isePo8m783A0D/SDM/RQFraZGYlETbD0whKnSF1veMs=,tag:Abzg9ahmd3+15mGFSlYypA==,type:str]
-#ENC[AES256_GCM,data:IPnzPhMCoaFJFsRlOh0=,iv:vwSiiaojpFC+49LRjKgBq6E7lRLJuZ5J8p9RqFmBZHY=,tag:aQusL0U6waC8iPfodDYuHQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:Yr9/vfdiqEF/G4NWuw==,iv:cq0O6ze6XhXdL68hjMUZcHHSKpSMWfyQAf2l5nIJbb8=,tag:szSNJ8xZztwuxuOeMozqqQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:TrAvZdcsmfocVREpVQ==,iv:FV42uiA7rO9H1aa/9ED4RpoVBM0RAGlKzIbyMOERQks=,tag:5D/M25ilGUlaMMDHjUGNmg==,type:str]
+#ENC[AES256_GCM,data:FuBsJK+6p7RF+vkXCpJBO0eGa6thpg0gj1ctfDBJhAfQj/WOK3L1w31koLWBy7vSXCDkBt8izOuF6L0FnMZbTno=,iv:EjR4e/k3lf1h0zM0960l1YLPOydsrKF+45aNt23vJRc=,tag:mfICgYQu0U+ouQzwfzc0oA==,type:comment]
+#ENC[AES256_GCM,data:HWkkdw39VJETYPuLTQEve13MK9KLDW4Xb7HhhKOJnKTrZtHtplIkMRduNxQ=,iv:1JhI+8fCgnnXg3nzgzlHGvauGcNk4G3GYs7cmfdDNbs=,tag:w87EKOEvpAtYbSjJeN3A1Q==,type:comment]
+VIP: ENC[AES256_GCM,data:HWzaizzGRRPo7I74Rg==,iv:zG01AWlkI6u2SyASmnr1c3dHlPwge1qaWJBZ15+st20=,tag:HfaZnaMCaeB8T8uz5XdvSA==,type:str]
+#ENC[AES256_GCM,data:hqKsuWn/1pQPQ8mzrOIobfJiugP+soEh4lJh,iv:31YVFmt6ksIDQD/eK1J6mYUDNtU9R34dwoN4/BI6y/M=,tag:zoXXa8XjWgwOq/1LeG38Rg==,type:comment]
+#ENC[AES256_GCM,data:KdDOTfZcGbAGN3M6y5iFSUvj9ZzpKgv+D220MVYoMQZ5YrFTvgMiKLZeuY986qcp7X2NBgraT60PtNhG2ypEsxf2cY+tX+OacX8yzfaUoBIHJ4FbtkhPjhU=,iv:MtWAlcmeotzus9sMSr2YGWRPI1wIPNp+P6jTgxvOSN4=,tag:9KunutlofgYKwCPvIGbumg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:7HfUn18CZ1muHTOyzeM=,iv:B4Pl9hzRZO1yP2U6S7xC2enHYNbJUsNwS4f2WPHllmg=,tag:piF538KAVHRLzw9ja/+fbg==,type:str]
+#ENC[AES256_GCM,data:Zdfr8xWfTsHqaQ8pgTMHTkmHW+jCi7xQU7B3Qa5WlayyPw==,iv:82Ed6VuSnZw4yZf0Y069en76oD7I3JkFUUh/HvnkCmw=,tag:xPR7dUzWosxuDpx+4TW0EA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:XMSpU3xBIEKccKeUyA==,iv:G4kC8OkN5sJY1ZMH4mde3tMaDCDSQyhT33J7tXQ3f98=,tag:WwEpQXApM4e4CWH43C7NRg==,type:str]
+#ENC[AES256_GCM,data:voY2Zlqc78B0EPYY81TXqa8qODo5Z9L/rIbYQxKOa1TV8WsVOsK9b7wrO7ftdoM=,iv:B71ctVkOl2w0DzW+RHhgNSaqhF9Z476xLuAuI7fe/uc=,tag:CLiWet4RRsW7fAmLi90DJg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:H4RFN3d7WNxGN6CGqzwa8/HY6qWX9FOkwN96rnsnVw==,iv:XynlVFi2BBBRsLipbSAoyVTir8PDyH2nVglFfoKNivM=,tag:qJMzLtA/E5hKSPI2Cmb2Fg==,type:str]
+#ENC[AES256_GCM,data:Zg6BvA9X+knt1CL8MC0lQh2dvVsq3ZAasnyosEctXbnVSMwmKANt/NBV/gSyY+Ljxx/1+nJLYD6cQry5iUY71jwEIjctQdzj4DmV5Ob4cKlVQw==,iv:WPGDXQUs264QNB1ekGhFKls38nf2OLNvUlFeMvfNCto=,tag:hJrFIVoRLgElgM8w0hYILg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:zOwNL2oB36efw/roDTvK,iv:4FWYzire6DFHDGfyWocl2+7/gk6kmkiE06LQ0dHVXzY=,tag:U+9SEo4fpSvN1/M8cFLQCg==,type:str]
+#ENC[AES256_GCM,data:1QSR4RrOB1eaful+BizZIUlTvf6VvsGaZoUNhpgB5EB+,iv:c3jEu9wypeX0hvADJPS1GELu9REm0Eu29K/5nt7icQ0=,tag:7XAbC86W8KSgPn/U1iRVGQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:lFOX762jvva7qIEfsF4R,iv:w05/c8fvu4I95Oa5fdzvL2qxqHTdVVN9CfmHNxQ7r4k=,tag:8JZxw7h7u7Ob7h+HTOY0yw==,type:str]
+#ENC[AES256_GCM,data:J/gH87hLlXBHc58gH0GmOpK5CRKHsfmnJ8QPW3qm5J5YBqw6PnH7fROFbOPbBOw5lo0cRiC+QJovjt6aI+gcjSmfNut9TJcoYf75Ror1tAw=,iv:dgXwJ3hlbrrlWY15cUVQuWQ8bes5p4JWj5Ukqeu1w04=,tag:IhaLFAVKvLjX+DGLGTCZ/w==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:nMBFVZyE8MfF9DIXa6rG,iv:yiTH4heRS5WOmICVmd/JHinZi8cDGR8WEQ3iNR5YGaE=,tag:LDMfYIy48ys6KahZq4hung==,type:str]
+#ENC[AES256_GCM,data:0UcSKTsR2qTNK5AnM3qv+Pe+K8oRiW1A2YT1kTgCP8AkgezrrUp11P4RHu9iDW8A3MyfjBtRkXZpWDAYEkSxtRMA22aPpp3b/M2RvKcsqRiMGsiU4HGe,iv:9vISHiqjilFFXYTG6/kq+qj1Yx/wF/ObmiP5IPMin9M=,tag:qGAjCQr78oSs0vBFqmW6cQ==,type:comment]
+#ENC[AES256_GCM,data:Cp/PuANQxQjjNFIoFriQ0yFLNFYbktpHXimphLTpoO2YtSBz0by1echor6qaEleeG+j1iBjYefAZlzLlmbKFjueKvWA6WPn5UE4RG+i9zrdrSMHqtGzaGiCI/5Nx5ZUUnlZJ1S1M+KdO7dgO3JqhlyUynTATJM3Aa5FSFA==,iv:ge5oQZ1kI+m4hrM7x+YDX5CL/SS5/mJrbJZ5VNik74s=,tag:W73UZUTwsSvNT43m2ZPsSg==,type:comment]
+#ENC[AES256_GCM,data:21x07f1qjUnbBy5q12UFy07JLObiIcOR4zfHcP18JTyApdFZDqR5YCxZkRDDNXRGEfSoHIqPucsrREMLW1b35l/O6f3MgSQ1HNzv/nvZXvU=,iv:19qcu2DZgEQVkgphDkDpU7hApvZSXjeqrDE5qMxGudM=,tag:B8Wg4VrMJ6TXAjXah9HLRQ==,type:comment]
+#ENC[AES256_GCM,data:4DrH7euu4Z2wNLN1CEMa6XY2YROVQnk58twuHfVkI6Wacq0uovs2RJ/AT3OQ/wZq0QYKBQAy,iv:PvohxGFpCnprQIjhKtfa5WW6+AtYC/7+n2mFZOs6xj0=,tag:fCBYQs78H3BeB/30FAXa1Q==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:owWWv5yEX/nero5f,iv:ZUKbbN0adJQ5gHGZQY+2krtzJoFL/rlvyHiOVJstjXo=,tag:GPNfNzOoM/q92mCRZIVATw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Z+CjbqiHTYJekYD0zMena3U=,iv:51wMJW24qCYdbQfPtp5zYfILnPKwyazqc64+vYKnUd8=,tag:9ifco3cJrv5wAUaqDJ2PhA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:40slxoQnkdgrEaGjALzx2t7QI6MF3ZvuWtaSfj5CaP8=,iv:VQblODJDFv6cTLszWqiwsbzfjE+52rrhprz6ezmN2wk=,tag:uMZ9lyLucJ3aApxOKiOwaQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XRynh3VnuRWvy7E+YQvbtOL2HcBxVSJ/nGCerJW2PdB8FuOpzritBw==,iv:QhZZK6gvopfCIlEYd0ILzMzP5Zg18rvG+MvVKkxrnB8=,tag:HaAOWpz1EJCg1GbzM8PKQw==,type:str]
+#ENC[AES256_GCM,data:1rlodZa7hkdjc8awKh1cq8lsQ7tIQEYsDFq0qn2xJhHP21UksQqEGqThX6D+wXSZNzE7jMw3GiJtMMwMNuhHvA==,iv:gOQEOO8Z7PjLh/xHV4yZu15icSeeSWme3gLoDleb/Xg=,tag:9DYF7w7tnLVeX0xIeRLTSg==,type:comment]
+#ENC[AES256_GCM,data:0t5AdvJIXW4RapaIllAImmkDV8TNAkII1HLW8qd/GOL9j+atYPkqnomo85HqR4xMlpido4lMSi8=,iv:+KjHCiwA/4RXzwjCH+CiLuS8Tuste7l3DVz5De3aLDQ=,tag:XR39XdQEJhr07YV4QCKyWg==,type:comment]
+#ENC[AES256_GCM,data:sCe8/D6IOyhysIxCgcnpugmi0Aak+1X8VA==,iv:XrBOfvVlGz+2Abyxb3lbcrXExIAafkJLBHXtbucR7lg=,tag:ISAd43zyHEjx1kKfASaX1A==,type:comment]
+#ENC[AES256_GCM,data:74jnwkrUB5DwnmzxCuN24XlDwgIuRz2Z9ZebFcwQQHQbe43gNuhhLjIiNSfMSqmYfDpgMkrxaI3Y1DMhcIpvrpgZ/GBs3zR7Te0VPa0=,iv:qGJUUuCAe1UP5FWqnHNKOGn95bxvG7sCNrXy1zomdlM=,tag:GLmKu4xvczVgw4/5B14l1g==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:QjWG8JA0wdc6Bo5ozrpYNxmUHBhHv+y3W1/LdLl6Jw6Ju0Z65b2Hizandj2yODxU,iv:iF7vX/5c6BOVB9S3+iSE+Ew98UMIYpEQB8k3fRR/IQk=,tag:0A8UZ15lnMWdpe05vUzMSg==,type:str]
+#ENC[AES256_GCM,data:lda5mhFNKDRU16q/WM9w2lXY2J+Y/ubto6IEURSzOgfmQ2MnX3S7cbFKhIs37RNEGHg0kDy8zK7ZP4SiIkoNzWER+zWC2dM=,iv:xvJL1h9eXAHpttVI389diL/PeMl7c5Oknd+gt6lWd68=,tag:Dgg2/c3jv86Q2NPrq8WIvA==,type:comment]
+#ENC[AES256_GCM,data:sdA12i0kBzes+NJkZLRkg6b9lcpJozoOV5C8CVUDMFgkJj4m4p4CgWNKTZe1mecl2zkhRmBM,iv:HZ5+rNqMqRMCHtYARwFjzTT1gmPKV2+a4z9d1lNV5jM=,tag:HD1nxj8ENKQu9hBbW8spQQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:rFUaK4CD8Q==,iv:bh7z1RfMPrEA4do10+aaG573nvwAW9yh0O92r++w66k=,tag:dHb3xm+XLQQsU1KanxCnXg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:jzX7Bc86rsI39GHx4dBXiId6z7U=,iv:Q+aF6WBFH9HvpeBulBely8KLQjYusEx7gXmS9G28cvg=,tag:UnpXIr0RFJ6xpgmqwaXOnA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:sDBzUmS0NnUxPAw=,iv:ZgtVOajYYiZOA8Tg/fSywkob+Dj6BVpjwWGscvKLRSA=,tag:N4VLRedTo55lIoakWp0nmA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:B9xBjTy4GrZTG3S0NwHL,iv:HEt45TZNlvze3bPp0MLyVJNxTQDkQCTiIpX9cWXIacc=,tag:E5lrenabeShbO0Gee2+IuA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sJMp4J3qmiNm4pd4utxBKxL5XAzkwQnp4g==,iv:52N2v14wCeKW62QwJw5px5t9n8Te3CDwYOIFFxAv2+M=,tag:tpUZaWe17sNMzRGpgKrEnA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:t08P+Mtyym9TTuiHRQXFi7n2HHU/RASv,iv:LXU0jyVJPfDNuGUKaA5kxUQOCG7tnqOgeptO7vANHvM=,tag:FoXai1pL6vg1Dp2GM/B/kQ==,type:str]
+#ENC[AES256_GCM,data:aFtelY+yJwhNPnKb4v8Kb+yyu87TGhlWNFSxnDcwgSnPwELD9xM=,iv:fwp9CWYPcWcBQThZc0EYUOUaEnco4L7SRdhlhLPIPbc=,tag:4KuSkxiwclujdg06W84srw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:pPwCvDZcRId+IYayQwe3foLgBYY=,iv:fkO6x3ybVrzbhoF5pHM+A6OO90qXuVljrovwG0ZSiIw=,tag:6VLuYrgzHT3+A31m3wrrvw==,type:str]
+#ENC[AES256_GCM,data:NI3hsgOttV4W7Mym4/k=,iv:+fiPLMrQYBz6xSNyFHvk8nWd57Jhj5u9B2dhNq2/htE=,tag:8XC/x/lEgxe9Vfa0URB9xw==,type:comment]
+PODNET: ENC[AES256_GCM,data:QRyOx0/qnQoCFnJm/g==,iv:2l7/8l3/9rlAvkY3P+UDbcOYUJvk+f9CBr/b0OX4bJU=,tag:9iwjpHqoT/1n8RBdtMdSzg==,type:str]
+SVCNET: ENC[AES256_GCM,data:qtspwp3Soh3nxRTU7Q==,iv:EdRp3m+v5zmQ/WwpXVBRdsPJOEsAPtuoj2d4pRTc+wM=,tag:jnGSQsF3LhhHcKkOiDFhVA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvVGJEQjBzNk9mU3lTUTU0
-            Y0pEdkEyVDRKVkNDdDdNNzdRK0ZPM1lyaWs0CjJYRkIrWGZwVnRHeWtTa0F1ckxM
-            OG5kbmlXYkRrcUlENmFyaUhlUXZvMUUKLS0tIDVmb0xXamJiaFVjV2ViUlEzU1B4
-            TU1JeG94UDdabmlYUXhLZ3ZkZ0xlaE0K69jC7T1mQbiRxbW3eQKp2W1dTES0Lf9d
-            +Sh35y5DJPQgp0wa/u4AqErNztRcd7nezcvrnTR30D9yJPqATU11qw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUXhpdU9hbjUrSU0vTTVD
+            SGJMVzhLbFVDRGgxTnlIWEZhSElWd1l6dEFZCnJSM3VoUVZJV3FuWmRoSkJnOXZw
+            QzMwVGlVd0x4TERTSThEdHlrZ2VENlkKLS0tIHZTM3VVTjQ3bGJCTTRCOHUzbkJx
+            d21uRTVvVzRFK2pHSGhEdTQyRGordVEKEoOetwUpSwiol1QKm+ocFPMDQTxIkT4z
+            eAuPzxFQBCWy2ofnpTi/PbrOasb37LK/uyUYofqvLMyM6hVRsqZ8Fg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:48:01Z"
-    mac: ENC[AES256_GCM,data:6tDK3dVBW91D6hWYEK4dZ81aSb1VcLVnThoFIN09vxuk9upGBSy6/xfgxPzrPwZnXVlcHxssLD/96r/nNAIRoDwFJWGocM0xi74NovMe5PuwcfaHYH/YlLPMLGusnxUjUk5D7FFGVgbiegEilEiIdwT/Bzg+2NtRnYHms09YgC0=,iv:prJMnG0tdYOPjWXwwZC2E8TzkgOnVDrFqML6GpUMpn8=,tag:1NNNCsWCzShOiTsYBWMQGw==,type:str]
+    lastmodified: "2025-01-10T23:50:30Z"
+    mac: ENC[AES256_GCM,data:7+GZ/w1j+AZcWBW6rSZBCrzAHLG42HITheGtTbgVufh9ghq9rtR+8Zf5HNw64v6Xuy1aE69sq+TIRmulX4zcbSL9ZS0aVsMn8PjnJEESnhhpgZitQapH88RQ7mTBL+ZCRkgrYn0u+ow4TZdfMGGkcGOrHnPy6+q6VRXosfirn+A=,iv:r3C39+3IBm5WRkCqAi9ibjNdBsq/4KTE/L7TBKAn/Jw=,tag:Gm5NoGg84bqKWOcIvC6ZWQ==,type:str]
     pgp: []
     version: 3.9.1
