--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:r6X66m4SpQOQVtJss5/17td1v0LP2CIyeLk47GYuzCYi6LhKZh+gC85z79BipbKXt+SsSuqWXiLszMME4gJi6EU=,iv:93tmf62gjkuOHTUd4Z9VR4WXxk/i9s1K4JznHY/ifx4=,tag:JfNkGPcrVn100CGwZJ2L7A==,type:comment]
-    #ENC[AES256_GCM,data:bDj5G+sX7OBTkCmndjvF+TeGSK9C/cRyDL2CIfrdrAs1+ZrEqbJvsuEVgvA=,iv:mfKcvmwLfZNjTAdr13jy1aw2lej3Y/N7YMNeYa9m+2c=,tag:xg6XEyqzCAczEDMSVcbUfQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:oNnHQY+tOE4yAxRxtQ==,iv:phs30djyLQKkovij+sK2jgLi+lUamwHSnYFZMN0EuTY=,tag:AiXrWvCp2DfbrdWGr2gItQ==,type:str]
-    #ENC[AES256_GCM,data:J22P/vaA6gPe6UhcBspBOO9xNkmXbq3d64Bv,iv:J75kkKjH4MKi8R6aPWZdMGpWRTsEnx5JlUfFvM/V4kc=,tag:2xKgIbLPfEKG+0ln+T9huQ==,type:comment]
-    #ENC[AES256_GCM,data:KB/sZkylpwkcfau3TDiUT2k7+Ma/jlLYkTx2XdD4HVegcT50Wf3y/Q1bS9Ma6eVs9no67ZZTl9UDeHutI7mUBP3hWh59kEp6jbX54gD7VJ6jZiac5HU884M=,iv:UwPnAtdJgXtA/seRprUsQWyULHn1yUDP/Qzs2S7rftQ=,tag:fNpBsYS+yfDaPsnJJkgMrw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:lcczw4R4URn5VC6fr9g=,iv:tsgVBPjw9ApcvAKsnmNwuV+IO5Ne8OWitjBiSBSBScw=,tag:Pyn7xIcoXAMn1t+n1Vul/A==,type:str]
-    #ENC[AES256_GCM,data:610oQ6mLVB/YVHsiuA8GBaXaq4R+uV9Ks6zrDfhfeBmZJg==,iv:R9lpkVrxkMSRQAsg7NyP0b1RxcsLnFqfRUAuzXhfnBQ=,tag:vhBhDKC2carsa+Hme/CtBQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:TlUb0cXEq6pqQu1elw==,iv:OtOP++XEma8Qr8rH3cnhUN5zPUb6u+Bw+0iW7NSDun0=,tag:mWD/SEMBc/BFxqDW4keD0A==,type:str]
-    #ENC[AES256_GCM,data:qRvBdp74IBvqpu+dAOP0TGt3AO7dA7Mwfg0LdD7nPDhHeDxa12Wgd2gB8hYYiiQ=,iv:VpUW3JQtEP1KID6xvgU0LiM6xu49+UPDSufvwvzf2+s=,tag:Wo1KDaz72vHUb96t1kPTig==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:AjBWJ02uDpUmdJaA5ZcfQjhDIi07LzYS/KOU0lRNNw==,iv:DzmTDQNcsqRBUFDTpmgx1IVmJZGpH41XmuwH8YGfPIg=,tag:ib3Tl+U+HkqHed+1xr2h3w==,type:str]
-    #ENC[AES256_GCM,data:1XQhfgbTm/zAoibYuJwHMtb1pZZyazWOJQrxnzf2ekEaLcOfoKNmDSuOm0rhhSiQQzAEHzCpEE2EE2MN8RmJMhZsHCnmcDMxPlCYPLntB3lTSg==,iv:LwiMGoNuH2vEY5bMML79fW8ww8fWiqzjtwakEK5eqHc=,tag:enBqLRqdz9U4YOB2N3Up0g==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:8OTpdwDhXtQoF2fhs/Kb,iv:xU/rQZf5RCwBQonMMgHT10faWkKbkost5AicySTZBiA=,tag:ddVRQ1AwptEuAEzdQTZ8Dw==,type:str]
-    #ENC[AES256_GCM,data:j2EchKpJvoPc7ZQfpU6/JPwREapMZVOXh9EVviz7PXAj,iv:Gy43LiM/UtFtLARwh4y2QLYGAaZjEtJCFucsWQO8QQE=,tag:BmtH3fLNNDL9zVYB2Tkr+Q==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:ssYci3KoFoqWklQlSXkK,iv:3vyr5h4cLbge6USk7rNzypJXqZ3awjXzyjwSRJRklGw=,tag:cns6aa2QRpOqMjDvZIu+/Q==,type:str]
-    #ENC[AES256_GCM,data:wGEDCN4DRLHSBWKqVuMpc3nYqwtteh6JEtrCXPagxGycrUzG7U9uVU49oRvH5KqLsuLo2GoLlTffSf692LSoOWRT9MBQqsG9i0wLiK2nQ2U=,iv:VzJc58WaCEUExnNVQaHoMGv99i1NZCm09nwlNhcdH+U=,tag:TpRUI7blq2ZqmSesSkQ6mw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:7kgasg9p71CLJwuc3NCG,iv:1wIUOM5HBCPKeFLn8IxrVTKlgUNXf7s6O8MrtDzjX4Q=,tag:+r0EPd6Tvf1+s7JeXYXWSQ==,type:str]
-    #ENC[AES256_GCM,data:hy6GlkxveK6yXeu8NZfrVB35AuJUIYRuc5Nq1v6WK9qx8rCqCx3NON4SxfuGbSwTLKKTb7FFb+YsKUAuF1quTgyv3b1+kTSJNAgddmgsoZrrhzs1+kKx,iv:j5Mt6kpMvTb4AaKpQGqY76bDni0uCcm14cIbRdkZq/I=,tag:W50DwEsrMyhYQPTqRlGMeQ==,type:comment]
-    #ENC[AES256_GCM,data:yaEdmLd15Y74o+bCBV41cDKD3z1Btx0Ruh/74GpgNXUM20s13+IoJ92TT7KgMtW0Fmqm6ba6XQ7EtoZBJvW4tSGXv2nPyuqdxPTIEWW78xs5FriRrdhyVcegD0GEE0Mn84RFfoIuoQngt/2KUqXoQJM0l/vUrjF2U17iRw==,iv:IE2DIWCBICAQ4bW0lxsPOzs7fc7G4d2c2cfuKw/PCvc=,tag:k7W/Lp8azerAWAMEfraSeA==,type:comment]
-    #ENC[AES256_GCM,data:W09lJnm5PmzVA/JEZA5vJsEpA8bEfLLOtYBhjIZXYdIQQAr0kLvRX1Ve4Jei6fyRXR/sb6h6Gb4hL4cfOrW5S7j3/KR6kArRY80U4mIViCw=,iv:Ayg+8nkhmH6/EnDtRI/chGvciy4W6FyDnm3/5EC1oqQ=,tag:Uuv9hm/1+abzrnMSmo7J/Q==,type:comment]
-    #ENC[AES256_GCM,data:+ICTHUH1YVQwkM5Ry7VHhsio6t0AGcGtT20Sew/wIFqp+LaUPjv5coC86tK+uNSxzBXBDY+e,iv:kohouYXc+N5tEkstCtUeUTopR3LJGeeXyz+HoUVgruo=,tag:+vWI49CI2HFjkeTQoUdRog==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:/4oo3qUKoA0361RN,iv:+hAXKm/i0rR/AUNITOJzGVMsQxE73IdsV/o+A76mxyY=,tag:+jvZzquU9LdI9rrQ5uBtzg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Cg8hPY2MJAIdJizIgzqHnlA=,iv:u7FCNp3f7PDNQ+LcXwc6ztQ9YkICJx09Z0FVuOBGSnw=,tag:fwf204xGa82QQft6mn7r4Q==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:JWU2vkZdD2JTKD/ltaQXkwRlKysKYae6l7ECsHw4eco=,iv:x5Lrw0cZeQCnw54zduF88tSoZMnwiRrL1cYLxxkCH9M=,tag:ZKrRo1130leqdVxx0B7clg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:mwTEPyHIZVaMCRD/iOtAnmkPuqSlf8h/+5myvLlcx0+rxc0dqjonkw==,iv:dA1+YBXR+ulACo3Pg6tLI6I7rTwqoHOTC5GkzSmRBWo=,tag:I/F69c8kqKNm876IhO/Ong==,type:str]
-    #ENC[AES256_GCM,data:gMOeNhOIfaz4MBkKcFpvnG9kNapPRLUf8m6Jjf2CQjPHYaQpF169L6+WuDvDH3PPmgmkTPtrvfV54nSUygO7cw==,iv:wky/TPEfXgVxbuOqAxbFO6oSDtYXg9W2JOLvwwCTgNk=,tag:NnyICB94Tmot7rp7wEn8CA==,type:comment]
-    #ENC[AES256_GCM,data:DuRbpTH6oWtHD9uCK/bRjSpuKfOOz508zhHBfsoJy6mAR0Q1nINZkrz1tMPqg7nZPSwJgMXyt1U=,iv:yhoYqrP+CSKkAUUPUFHCAxtDYfl2zjqXVRj+/TB2cl4=,tag:+eP9mdZZ9fVR/uoIc/oRLw==,type:comment]
-    #ENC[AES256_GCM,data:DRX/Jk3PUeNC3uBe7r6OoZbH0FIQq+C82g==,iv:Uma8+y7zAjkKANm5snedjuILurf4M84zxs4uBxyLuM8=,tag:o4ENqDwmR1Ii9DuCvFdtPw==,type:comment]
-    #ENC[AES256_GCM,data:EbUVye/RX5vg/czI2C1cHhcSl/YG5MzRqMK5kQpRDxuAlTNqP2l2vkrxisBEW7/yslrGpfEEDnA6S39Rty9l3+5kx2g7fB/8XrhJXDY=,iv:D2AwQUMxekdYpkDqLX79VYSBnGTg/V+7Q7lyfUnC9cA=,tag:z5jtMswthHwV6JCwPc2HOA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:1evt1vcdmoPUSxbjA1MPQoM5MaoWeHK7sOgdQtpYnb3hH7MHaX+GCb0WAs8yPQl7,iv:rUI2lmFV8U4RZLcjgsu3UtgzD0dCktvRV0rImgyfjkM=,tag:JIMpGA6LcWkuJUtDVzjC7Q==,type:str]
-    #ENC[AES256_GCM,data:IxUqcyb0WsQTmVkCUJhw9o8CYZg34lzt8yBr6hX1rgQyzZ3IMyyjBK0LkdovRu+wCr1JH0K0dMJDNDMOtuYqcR+DMEHEt5M=,iv:Fw8+73FV+IXRZtwufhxMFBiQmRAeKg0ycXHmTp5uZYs=,tag:jAxV+roS8NuHCP+l+kUtCw==,type:comment]
-    #ENC[AES256_GCM,data:BMjl1rfXmvhnK6SDt4mY+M51lSvUEQJJ4jrodNCzYM7IteJZr1oYI6L/4y3NjiSSHlUDoxwg,iv:D/kPtSg26bX6mwrUjtwyl7oAyM1LaTAPWBUmlR7KHvQ=,tag:b7fFJkSmND4yLDLGXARN3g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:EBJEkZ6z2w==,iv:i0m2lnI/A6OP33S4yEU6YmAcxsxqeSgEEYAoLLwaTm0=,tag:CC5T/yWinhXIlzRIUV3rnw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:I1VQChL9xd35FBNJnPebCes/9rQ=,iv:zYnA4XsXXivAtYzGxu2tO7hpldcscn4x3iwWO41TsH8=,tag:ufWM1iWSh34IupQmNFQ9AQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:9IUUs750FVwRJIM=,iv:KJkfGyEo1/Ze7kjHWGtCypSyu47bgIvm4VonS9OdQOU=,tag:jKubzT1jjbmuxrI1ntSYMg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:xSZO1ctc64KbLTANQ6uT,iv:mK8rBgabRhY0EfTJC/OHd/VvYhBaFFjnAOg7293/Vy0=,tag:7QFnbba8G5Rwwr5X8IZYVg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:hSE/nO7jGucDPyt8xAC9Yy0PVdrgROGSKg==,iv:x07qzx+lSfUAXRzQZKhEYyaP4+VbB5evF+Kqkqho5+8=,tag:+Dw7skcQ8nqVW9Pqmp4deg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:BEYKiJQMeBEo6Wu6g8BPS9wY44IqKDKQ,iv:dY/rZsIboEkRdkHFtk1prRX6+tkxDQXodufiPqo/VIA=,tag:/OPcDvv8y3lu9FKQg5ILtg==,type:str]
-    #ENC[AES256_GCM,data:8z1piGeFdDia9Q+pNYH3wuHYg3v4FC/NfpnAukc9EMBuiJROTT8=,iv:8jMJrf2Onar/nZ1Ssc8QtQRoP93jtPwV02W7gy7oeZ4=,tag:RgAcaydfpnixwqhPYByw4w==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:I1EmYmNqgQig4ocNdHpKfZpiwK8=,iv:kqm9iLCeXx6duyRK/PmKaY2qed08TWoxOvkJNuj9H+g=,tag:lHlLj1bFXeBt2bStFlgkLg==,type:str]
-    #ENC[AES256_GCM,data:SIlakBcx7LQgOdJulUs=,iv:C1fimXxLKLQpZlvsK88xC/j/GHQqxVxcx7Vg3dYAo2U=,tag:z65Ckr0ZsvBqn2k0NYkmgw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Ypsqr+ouBS6aRbgGHA==,iv:itdQjy9TJbVVO8oww1ekSDGnttx5E1Bm9Ek4Utyuxbs=,tag:9ftxmlN7oHWyvNvn2SmzTw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:6GHxN5jbKOLzlfGM6Q==,iv:GN4zq42omTDogSwvEJqS2diuPteeI/N+smKP6ewYOUM=,tag:ZsmwOdaHA5vjiAXAE5YS8w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:a7MpOA==,iv:hR3/wsPaorssdpkHuH25dm0kboBMrypGPoeRL3xvHFk=,tag:d+U7GhGlM2KMwQeMrFufRw==,type:str]
+    #ENC[AES256_GCM,data:rE07KUEN6BPBm++Jthr70ykR0Tm/5gZsmqYkTtAyguBbvVgPn8NpVDTdQbftDa109FEBEGYobnNwq++umgqPlq4=,iv:1K8OUD3hfYlsGuZlsSkLVKczzgjDCSW0+hPdfLGJ0cM=,tag:T5XeItAY9n1z20RCwcBa7A==,type:comment]
+    #ENC[AES256_GCM,data:ShKd9BzxqPKhWzLGxtrmDAA7onV9H5FNGhYcZUfV/kDdW+MOC6kbI8wUXmc=,iv:TAW6CO3e06dBO8swZMy4otnEOvTwbl3/hEk7JMtpxJo=,tag:8N4hHbGPGLZNglV6xFakZw==,type:comment]
+    VIP: ENC[AES256_GCM,data:eTfDIHbqcVBTyk7O9Q==,iv:VQKD82u3uQgyLBYUHWXKu8ywlMisprEq+yyWmJXYsp0=,tag:Mv+/2FkbwCTT92KBs+pH8w==,type:str]
+    #ENC[AES256_GCM,data:1LJ9L2gXRs0ThktHojc9DRDV1NUMcUVV0qJ0,iv:JDhrjR+WGMofg6RdHvNYaeRDn/ISezx8igYzmOwJgmA=,tag:y9sHaiGCGBh7aJAodX0PiQ==,type:comment]
+    #ENC[AES256_GCM,data:y3NUU1t2+6Akisk4hoMN6D1CiMIC3TT63uW6ohb0xJH4n8HGfPoxOuAbEmH9LCvLY64OWzMFSGSaaNvPC0SBik8CBMpopxEB+L4FzK30YN7nduy6LQlGEXU=,iv:MNlGZzg4be2UwrDy6KfWaqnc1m6ueJpF+l8ubrChRPY=,tag:ZOuunyulK4bzSOe+ivHL9Q==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fbPRJUEEV/dwX5Xvj5o=,iv:MzMOcG4UMMDH4bHVjDDZC38gtR/ZF8iEpj+0XubUN/A=,tag:u8Tb+rES4iSfG8xxplNWzA==,type:str]
+    #ENC[AES256_GCM,data:GYJIb7ezgOiG5s1/H9ZplT1BlstpdQGJ9ta56BiQS9ra3Q==,iv:zVMeoOQ5bE+Kp7D+jSmFcqusw7ZbluYBaIH4Eae7ULY=,tag:FK5GIT47Jiybm0MDxzRZFg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:abIOLPQjSK+A1qtQJQ==,iv:owVbUUbNef1QtWbh4qHKLqDEWIVwLfZX7fLgoxq89U4=,tag:WdXAhFvjMk1WFSUKr/vIFQ==,type:str]
+    #ENC[AES256_GCM,data:W7BuojIcAh32lVRS/ASKdup9pZfSio0x/HqHUvMDIF3/YIR7Y4S8s0Vo1VsMAek=,iv:SpkVRRiWeTOp1Lgh5tU0IhFKP3cSX3bGm3S+ZJuKRHY=,tag:k6Hm3mha0AjRi3ykLVQmFA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:ESFyy8kxN/iQDSI24BI1y4UzN6WuzhjYxMsFG/9cJA==,iv:R/v3Zv10ch4YXFY2rnrbNU+Vezj3umvdBjc38+OFSZE=,tag:c+hi6wGSVC9DQmDRMw2rSQ==,type:str]
+    #ENC[AES256_GCM,data:xRuvkAjfQUof1LOoXoYy3+FRiXL4bDd9srmamx9Mb0KH7IwCgMoT93lny8buTpPMv/RHrL9E5DZHFgermI2RR3ZFNxbCbWBufarELa2Z2oQZMA==,iv:eVUYajo26r9+qRyDrtHf280mjrKFm2fvlvxezNqDxQc=,tag:vRMR9ybMPXX/Xxr9EUEBhA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:nX+Sn5TOkgR9zFQ6iLq3,iv:W+NiM/3RzMnp0IIsYPP61yrtc7+6OzTDSNwk18aHkWU=,tag:Tf/Ts2weAU5bL4j/kp09wA==,type:str]
+    #ENC[AES256_GCM,data:h8pXoXPjlOjYz89A3s1uZNFtJOcM8G+lHY7trB9BdJbV,iv:SiOGoq5GRYIQtH4lYjJq4t2z3+5zPmWqXDQLIjOPlOI=,tag:kRBJTiLZ99Z29CSLkxoVAQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:nxulevYq3WXk4lEM5RW1,iv:s04+JNpwosSpP2BqIZ/kZmxjspapJLFK7XmmSEIo2lw=,tag:GOGJyTfqMuJfREronZB92w==,type:str]
+    #ENC[AES256_GCM,data:jdIqP1NR3+aEuUbEKrWpD7pYNMQWMzLQ1rOI0nuoOISLYrk6TH3YaRmx79fg+bKKI3wPOcWPRnd1w2tKZDoq8czognQZxuQx2bLt9jPJBl8=,iv:i1GeQRjemIM648bW+7KwDgNPa+NLRIn6cJiRpzmnWFk=,tag:WPvfm5M1KouH0kA572bJXQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:DZj+IIvvO+xSVBkZZSLI,iv:SnH0qQwtjVu1b+bLMRWm5W7kV1AhdZRRZOUHyngY3oU=,tag:k156r4jWi6szW2vW5x31VQ==,type:str]
+    #ENC[AES256_GCM,data:nfhkW/Iiem2wZW07qoaXfq2fsV/3qyCkXIwQ231IeqfPEnsWc1j1k59/7mxq7rluaAz+HQ+Fr5pGGaEukZFJ+izzQ2hvEVQpO5Sv84vqjh6/5xVK+sNv,iv:hAEPnyuG5/IsQKXb3BRI0Pa0jhfQ4CzuvtQTe4cEmKU=,tag:IMQEwUQoxlCrDSaLkCOUug==,type:comment]
+    #ENC[AES256_GCM,data:9q441GqCSWSVvbCS/UhjMFIV0xEoW8Tv7YXy8coveS0vYqjYyQze1s81yNv3lIY4v90pPNM0Fuows9/n751zPCH2rqmbLYLwRPUScPKEncXtnGzz0YGKdaAL4vBcsxWczCHm//5gPY94/hf4Mt5lXar24pmnhxtHHujm8A==,iv:I7u+rYacLXAw6WQTPjA/SEbo8nLny+88LUAwlsFmBSs=,tag:cBemj6wZRFEmQwxGoFuf1A==,type:comment]
+    #ENC[AES256_GCM,data:q2vAq+2c6QmftoGwgh2SaFK3uwgnrnu3NY+o2KwT7wuy0i6jjMdU4SX2R89h4mQye2ORFaFNUjHVtURJVk4Zv16blr5mVTq+W/Pz171HIdw=,iv:bRRUM3aF/N7FgfDwAxCpSbBHkOIPvljr2TnzEket6WI=,tag:TEc/j6gkk7J5K0n0sDjgFA==,type:comment]
+    #ENC[AES256_GCM,data:yfHpAueNvPKxO94qEWEuSuQ2lR3mzSQEgjC9fz2PSMbdYQeFQJf5coZgzifHxbBAilW7zTel,iv:5mDHVlZz0FSF3KZd7gZ/QoOhAYTBlm3o2nv5vPHDUAI=,tag:MIGE2hI6BigOSDmscWvL4w==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:24sFxRJwxXzH3sOR,iv:a1P9B/8Q2FKZChLbu3kVacLEn3Wx5p0Nv2gOU1FW2VM=,tag:PmsK1w3JPq5UYIFD0187gw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YOckFHziifGNPMYRRCBL7CY=,iv:/jtTSNxLdzEuv/f65MctAhyEkd19uCxTeYpdBrjq1kk=,tag:jy2kHA/iw5IuZIbbpUg/MA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:vGKec8BvQSSjHeps0UO9rwt9AdDdbESOreLKc7ZVtss=,iv:ujUrhnRUa+dVUivuicV++n7oWYFV2HoHgJmlX53xs9A=,tag:1cejxSXt7Wbal/dLDr7KEQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Lhns8qig/kSfKs8mQyKFwhRM4QjPzVSjUfVn1dJgYwaYZaq/JKzY3g==,iv:e5CgpQROpBIoSzWJj92+ivJDtQaB3DTmnpNU4sOi84s=,tag:oQiBWv7blk+Jb+z5yi3lYw==,type:str]
+    #ENC[AES256_GCM,data:E9GPI8Sd8aJ1zd4J5b0LNPqSsjMGTHh4GJiWqW/+EfagD13uUStJ3L4PGkLIRJzWCAqqwIYwJ2cIybeEokEZ7A==,iv:pNZMtRO19488jh0J4fHYvXhIHoqVFQV6lBRmKsRsW2g=,tag:sASeUJYBPorrZ0+3dHrwQw==,type:comment]
+    #ENC[AES256_GCM,data:UW0sfYniZsU8B+ppxlXD/p0B6T0GocfUv3fDXntRHl8Sp83IyROct06yXg81oiyujDP4kcE2WIc=,iv:anf8kjzjVwV+JidujKylQlc5LvW3XX2eGcRyotN+m9w=,tag:BXNWYex6NcmA9N1etpSMfQ==,type:comment]
+    #ENC[AES256_GCM,data:4wQvSwqAu2zmh4LLqqFozibb0+6n/UYSRA==,iv:TBVxOqRv4DttFtVXmSd9TeCafGvE3TudHLFDhyTNYp4=,tag:j6G41Cdwa3QrGCp2Yb3yxA==,type:comment]
+    #ENC[AES256_GCM,data:dNGv8LyWmulocvDvbz29cziKPRLOaq8X5syLk6mhFy8aItHqeySzh1ovXy3RewcyFzxh6V1OmAnkhSIXbSeQJJJ2Vf0u5W8WpYxvy/g=,iv:P4tUbDXwk640shuEj0KydkfMtRy9wdJ/485RjrEJDs8=,tag:+C+TalvEI3+BPAy5bvRx5Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:kLpxh0ajMCtH0LPF2fbmar4tKXIAB/0y8Cg8/OPv4+/Tb9sP9KCoUA7hQv9mpX6D,iv:nUa8/JESr6CgKD1xUX6DMwUP4dQGYJ+shTIQO03+jeo=,tag:gjCw0hVsJjTothvOhh+tDw==,type:str]
+    #ENC[AES256_GCM,data:1Iz4o4KdBkkfHUdPzQoF+jMBoXgao42a+fpgrKKlqZCEZNTOLOcvm9FRABtwd8l1lESlNMrAVDhJABx8UiUczzhn8izu23k=,iv:yRVZZOmgHGkYQbMuQlubkKgX1hV8+kOCeZvzPsyepWY=,tag:4XvUKLA/JzUbes2HgQipgg==,type:comment]
+    #ENC[AES256_GCM,data:DlqWXJ0VfBJRXBTEaveHBkL47ex7Us/Zzkc/6YUVzmBp15oaDeqUOLoDpCu/Sy1bNGQqOr/6,iv:Co+wOpp763uJg8UbcvdnZlqYFomcbw86dSpf4HTJ8BA=,tag:cPdZbPYMAFqVFVJLkpZVmA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:tcHYsi8qbw==,iv:Vd9UJVsTmjDEg9HzdVYYHS3qe3eal3R+Iq2rHn23zGQ=,tag:1xN0JBa2ZT5Q/9XkTMm6oQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:em7IW2kehbIQyLjCST9RwUBP8XY=,iv:rU5+zY0BoAoz3EXQ9xoYw02VA8zUCwTzlnnJs7RsEuw=,tag:2sREg7HCx6XHB058RYGHFg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:ZIrOT8Xers0FoH0=,iv:abZWSS3ZwXxIj8Dn2pxA/wkTSDGRtxJyTdLJRxki2iU=,tag:thqDPYqT+aT2zPQwQ7Txiw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:tF2xipzaAVDwYIKv5BxF,iv:VOUUPT7Nv0XxyHTILbheggLhL2fIrea0mSB78z66qL4=,tag:PEHsJwQ7+L98PNGHeROlIw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vmlXZ/iH7CQxTDR5wZZXiGgWtN7oCG5WgA==,iv:5cRxlLcF0bL6DR9M64pUuZsCAY3aIrNBQZ4wGOzqF6w=,tag:lkPvzNTkCFx9TmFOI5icBQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:hIkNpy4mTqcZK30YInrjCByf6euUCEIx,iv:sliAV5839utSRz3fECG4IxHR2TWf06g03gcaQzI/rXo=,tag:Z85Tac8pLOOZL3CwA/XsQA==,type:str]
+    #ENC[AES256_GCM,data:3M3wDip5yiKEIgIHbfV0KpJlUML9U9z6QgeRm4ZpNRgcrtBXWoQ=,iv:LZUIInRmbZJ9kTR2Rp8j4iK9ENAJA3Dqqyeyk8Ije+w=,tag:ATQqK8ce9+2S2KmJD6LSjA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:LPNRIeLxQOBOl4l/+dcRxEmaN8s=,iv:ivwK2ruBWnsE38O+mUGHuI9Kr9HsBqbaOUo07BEN17Y=,tag:kY1mcEXGwfhtvmbIYdJagA==,type:str]
+    #ENC[AES256_GCM,data:UhTWKVlhSE7sbFS60nk=,iv:TgMVlQjb6EC+IyQR8ft0vEJk/7ppIA4nkt9nbWw+og0=,tag:hSFwlxq5YcGPfALsT18MSg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:QyiEPidM3Vt48o9psQ==,iv:Ck2CMCCrzBm7s8TflARbpVqofqID2/zMj8Jz3QG5qiY=,tag:vcOanMuP0d0vOrsoriA9EQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:pOnNf6g9CCUdNiCz3Q==,iv:FIbnxFLgnREcH7ZCRx+Vltal+rNUDOiLjSxnitWK6k8=,tag:+H5GhsIYVVOzMcH/oKCoXg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:vQXb7A==,iv:viTeInvTAvO8b3dHroYG6JupttOJbEXXatPDbewKSSo=,tag:PvhvlYMCgYNLY+F3tn98zQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Z2NXcUFUWGpjTUpDNzUy
-            T0Ird2h0WGhodUFNQUp4bFRydUVsNUF3RzA4CldEK1ZKWGltb2xlUmhtTTBqWWk4
-            OFRFaUZaQ25RYTAwUmpJbHJ3SzRMaDAKLS0tIFB3aFBocTg1bDZFc1BTelRjckNF
-            N2JNWHRqUmpoemp4WVNIdGVXSUxWNEkKaugNhf3eCeDJoGbW7obKRzt48mr9Z1zk
-            MjpHZjevwPzv/RVAVGglrzlUU9d1rQzDjilqfC2L+ljDYYsdkaIlrA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1QWtZY1hxLzZWK0E0ZGk4
+            anlOTVJuMUtKK1QrTVRZbnFFMkt2cXJOUlZVClBlWlByREovS1JRTTVnTjFDdmdB
+            SURqR0cva0MrZW1pMDBIMWRuN0czTEEKLS0tIG05ei9hUllUYkZUSHB1cGlxR2o0
+            Z054M2tHb3AyWXhTZzZtSHJtRjJxV2cKP1DKDIeOXHVwvjDkCxCMyrNGaX7hoWaw
+            xJbHjGlM72G/O05UYiCBd5ZCOfADq5+Cfvil77yM3Zln0WOc+tSjMQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:48:01Z"
-    mac: ENC[AES256_GCM,data:HYjiVK/eW4aDOpMbshrsl33B2HWqkOPJNntiOzF5eByFwg5kexMfFqdugOEJh3TpC3UiTtNuMyN4ZLXp4titVrWv8B1eDsOdUBqO4444XA37J4BMUA5YwUF3JFuRAC/GinMaMF2zWNwdc+j+WCg1swDSljT96OuSdp/c/KLA5TU=,iv:c2P5UqXEahT7YDWAPj7YJ/23U2zQ2J7F841sFAnf5HU=,tag:giNFWtG5dVTcoap8CK9J2A==,type:str]
+    lastmodified: "2025-01-10T23:50:30Z"
+    mac: ENC[AES256_GCM,data:ADV26J8hfzCf4NpA/Vl8ap0Gxg3Qem+4+3V7JtmpB772TAKbRckeUUgsb2+4gHmQC5tQCbnXxbdNvcRZofRTo6SGk91SRNYNI1HEt1wTl99EPACqlSy2xLVlT52S1KTBJccUwLlYQRPm4ghQRtncdOczSEOYlxhOFsOiJD/s2Jo=,iv:k5jML3ZA7BJYix07Cr8GOTLXJnYJXwPUNI6cDTKd/qU=,tag:u7Th1vmIZ+qk4/Rsv0n3AQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
